maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:8: error: ';' expected but 'else' found.
    else
    ^